force-app/main/default/objects/Opportunity/fields/sugati__O_Client_Invoice_Directly__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Client_Invoice_Directly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Invoice Directly</label>
    <type>Checkbox</type>
</CustomField>