force-app/main/default/objects/Opportunity/fields/sugati__O_Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>