force-app/main/default/objects/Opportunity/fields/sugati__O_Commission_ER__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Commission_ER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission ER</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Opportunities (Commission ER)</relationshipLabel>
    <relationshipName>CommissionER</relationshipName>
    <type>Lookup</type>
</CustomField>