force-app/main/default/objects/Opportunity/fields/sugati__O_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Company_Code__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OTDV</fullName>
            </value>
            <value>
                <fullName>OTUK</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>TBUK</fullName>
            </value>
            <value>
                <fullName>STUK</fullName>
            </value>
            <value>
                <fullName>OTGB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>