force-app/main/default/objects/Opportunity/fields/sugati__O_Continent__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Continent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>sugati__Continent__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>