force-app/main/default/objects/Opportunity/fields/sugati__O_Converted_to_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Converted_to_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Booking</label>
    <type>Checkbox</type>
</CustomField>