force-app/main/default/objects/Opportunity/fields/sugati__O_Converted_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Converted_to_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Quote</label>
    <type>Checkbox</type>
</CustomField>