force-app/main/default/objects/Opportunity/fields/sugati__O_Copy_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Copy_Opportunity_Number__c</fullName>
    <label>Copy Opportunity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>