force-app/main/default/objects/Opportunity/fields/sugati__O_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>