force-app/main/default/objects/Opportunity/fields/sugati__O_Credit_Card_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Credit_Card_Charges__c</fullName>
    <formula>Amount* sugati__O_Credit_Card_Charges_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>