force-app/main/default/objects/Opportunity/fields/sugati__O_Credit_Card_Charges_P__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Credit_Card_Charges_P__c</fullName>
    <label>Credit Card Charges %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>