force-app/main/default/objects/Opportunity/fields/sugati__O_Cruise__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Cruise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cruise</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Opportunities (Cruise)</relationshipLabel>
    <relationshipName>OpportunityCruises</relationshipName>
    <type>Lookup</type>
</CustomField>