force-app/main/default/objects/Opportunity/fields/sugati__O_Days_to_Departure__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Days_to_Departure__c</fullName>
    <formula>IF(  AND(TEXT(StageName) &lt;&gt; &quot;Enquiry gone cold&quot;,sugati__O_Departure_Date__c &gt; DATEVALUE(Now())) , sugati__O_Departure_Date__c - DATEVALUE(Now()), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF( TEXT(StageName) &lt;&gt; &quot;Enquiry gone cold&quot; , O_Departure_Date__c - DATEVALUE(Now()), 0)</inlineHelpText>
    <label>Days to Departure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>