force-app/main/default/objects/Opportunity/fields/sugati__O_Default_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Default_Release_Date__c</fullName>
    <description>The default release date for new room allocations created against this opportunity.</description>
    <label>Default Release Date</label>
    <type>Date</type>
</CustomField>