force-app/main/default/objects/Opportunity/fields/sugati__O_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Deposit_Amount__c</fullName>
    <label>Deposit Amount</label>
    <summarizedField>sugati__Client_Group__c.sugati__CG_Deposit_Amount__c</summarizedField>
    <summaryForeignKey>sugati__Client_Group__c.sugati__CG_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>