force-app/main/default/objects/Opportunity/fields/sugati__O_Deposit_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Deposit_Due_Date__c</fullName>
    <formula>IF( ISNULL(sugati__O_Deposit_Overwrite_Due_Date__c) , sugati__O_Departure_Date__c - $Setup.sugati__FormulaSV__c.sugati__O_Deposit_Due_Date70__c, sugati__O_Deposit_Overwrite_Due_Date__c)</formula>
    <label>Deposit Due Date</label>
    <type>Date</type>
</CustomField>