force-app/main/default/objects/Opportunity/fields/sugati__O_Deposit_Overwrite_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Deposit_Overwrite_Due_Date__c</fullName>
    <label>Deposit Due Date Overwrite</label>
    <type>Date</type>
</CustomField>