force-app/main/default/objects/Opportunity/fields/sugati__O_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Deposit_Required__c</fullName>
    <label>Deposit Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>