force-app/main/default/objects/Opportunity/fields/sugati__O_Destination__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Destination__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>