force-app/main/default/objects/Opportunity/fields/sugati__O_Destination_Map_Image_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Destination_Map_Image_ID__c</fullName>
    <label>Destination Map Image ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>