force-app/main/default/objects/Opportunity/fields/sugati__O_Destination_Map_Zoom_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Destination_Map_Zoom_Value__c</fullName>
    <label>Destination Map Zoom Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>