force-app/main/default/objects/Opportunity/fields/sugati__O_Disembarkation_Port__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Disembarkation_Port__c</fullName>
    <label>Disembarkation Port</label>
    <length>250</length>
    <type>Text</type>
</CustomField>