force-app/main/default/objects/Opportunity/fields/sugati__O_Display_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Display_Due_Date__c</fullName>
    <inlineHelpText>x number of days before Departure Date. To be used only to overwrite the standard 60 days before departure date.</inlineHelpText>
    <label>Display Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>