force-app/main/default/objects/Opportunity/fields/sugati__O_Display_Price_for_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Display_Price_for_Client_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Price for Client Group</label>
    <type>Checkbox</type>
</CustomField>