force-app/main/default/objects/Opportunity/fields/sugati__O_Division__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Division__c</fullName>
    <description>Group ownership</description>
    <inlineHelpText>Group ownership</inlineHelpText>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original Travel</fullName>
            </value>
            <value>
                <fullName>Original Diving</fullName>
            </value>
            <value>
                <fullName>Simoon</fullName>
            </value>
            <value>
                <fullName>OT UK</fullName>
            </value>
            <value>
                <fullName>Combination of above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>