force-app/main/default/objects/Opportunity/fields/sugati__O_Document_Communication__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Document_Communication__c</fullName>
    <label>Document Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Direct To Client</fullName>
                <label>Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>