force-app/main/default/objects/Opportunity/fields/sugati__O_Due_By_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Due_By_Date__c</fullName>
    <formula>sugati__O_Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due By Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>