force-app/main/default/objects/Opportunity/fields/sugati__O_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Due_Date__c</fullName>
    <description>IF( O_Display_Due_Date__c&gt; 60 , O_Departure_Date__c - 90, O_Departure_Date__c - 60)</description>
    <formula>IF( ISNULL(sugati__O_Display_Due_Date__c) , sugati__O_Departure_Date__c - $Setup.sugati__FormulaSV__c.sugati__O_Due_Date60__c , sugati__O_Departure_Date__c - sugati__O_Display_Due_Date__c)</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>