force-app/main/default/objects/Opportunity/fields/sugati__O_Duration_End_Days__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Duration_End_Days__c</fullName>
    <label>Duration End Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>