force-app/main/default/objects/Opportunity/fields/sugati__O_Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Emergency_Contact_Number__c</fullName>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>