force-app/main/default/objects/Opportunity/fields/sugati__O_Enquiry_Month__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Enquiry_Month__c</fullName>
    <formula>IF(MONTH(CloseDate) = 1, &quot;January&quot;, 
IF(MONTH(CloseDate) = 2, &quot;February&quot;,
IF(MONTH(CloseDate) = 3, &quot;March&quot;,
IF(MONTH(CloseDate) = 4, &quot;April&quot;,
IF(MONTH(CloseDate) = 5, &quot;May&quot;,
IF(MONTH(CloseDate) = 6, &quot;June&quot;,
IF(MONTH(CloseDate) = 7, &quot;July&quot;,
IF(MONTH(CloseDate) = 8, &quot;August&quot;,
IF(MONTH(CloseDate) = 9, &quot;September&quot;,
IF(MONTH(CloseDate) = 10, &quot;October&quot;,
IF(MONTH(CloseDate) = 11, &quot;November&quot;,
&quot;December&quot;)))))))))))</formula>
    <label>Enquiry Month</label>
    <type>Text</type>
</CustomField>