force-app/main/default/objects/Opportunity/fields/sugati__O_Enquiry_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Enquiry_Note__c</fullName>
    <label>Enquiry Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>