force-app/main/default/objects/Opportunity/fields/sugati__O_Enquiry_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Enquiry_to_Quote__c</fullName>
    <formula>sugati__O_Quote_Date__c -  CloseDate</formula>
    <label>Enquiry to Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>