force-app/main/default/objects/Opportunity/fields/sugati__O_Enquiry_Week_Actual__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Enquiry_Week_Actual__c</fullName>
    <formula>CEILING(((CloseDate - DATE(YEAR(CloseDate), 1, 1) + 1) +
MOD(DATE(YEAR(CloseDate), 1, 1) - DATE(1900, 1, 7), 7)) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Week Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>