force-app/main/default/objects/Opportunity/fields/sugati__O_Enquiry_Year__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Enquiry_Year__c</fullName>
    <formula>YEAR(CloseDate)</formula>
    <label>Enquiry Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>