force-app/main/default/objects/Opportunity/fields/sugati__O_EU__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_EU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the holiday in EU country?</description>
    <inlineHelpText>Is the holiday in EU country?</inlineHelpText>
    <label>EU</label>
    <type>Checkbox</type>
</CustomField>