force-app/main/default/objects/Opportunity/fields/sugati__O_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>