force-app/main/default/objects/Opportunity/fields/sugati__O_Finders_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Finders_Commission__c</fullName>
    <label>Finder&apos;s Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>