force-app/main/default/objects/Opportunity/fields/sugati__O_Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Finish_Time__c</fullName>
    <label>Finish Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>