force-app/main/default/objects/Opportunity/fields/sugati__O_FIT_Template__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_FIT_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked for template records.</inlineHelpText>
    <label>FIT Template</label>
    <type>Checkbox</type>
</CustomField>