force-app/main/default/objects/Opportunity/fields/sugati__O_Flexiable_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Flexiable_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexiable Date</label>
    <type>Checkbox</type>
</CustomField>