force-app/main/default/objects/Opportunity/fields/sugati__O_Flexibility_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Flexibility_Details__c</fullName>
    <label>Flexibility Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>