force-app/main/default/objects/Opportunity/fields/sugati__O_Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Follow_Up_Time__c</fullName>
    <label>Follow Up Time</label>
    <type>DateTime</type>
</CustomField>