force-app/main/default/objects/Opportunity/fields/sugati__O_FX_Transaction_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_FX_Transaction_Charges__c</fullName>
    <label>FX Transaction Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>