force-app/main/default/objects/Opportunity/fields/sugati__O_FX_transfer_charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_FX_transfer_charges__c</fullName>
    <label>FX transfer charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>