force-app/main/default/objects/Opportunity/fields/sugati__O_Go_Live_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Go_Live_Number__c</fullName>
    <label>Go Live Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>