force-app/main/default/objects/Opportunity/fields/sugati__O_Group_Additional_Items__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Group_Additional_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Additional Items</label>
    <type>Checkbox</type>
</CustomField>