force-app/main/default/objects/Opportunity/fields/sugati__O_HE__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_HE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HE</label>
    <type>Checkbox</type>
</CustomField>