force-app/main/default/objects/Opportunity/fields/sugati__O_Hide_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Hide_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Price</label>
    <type>Checkbox</type>
</CustomField>