force-app/main/default/objects/Opportunity/fields/sugati__O_Hide_Tour_Info_In_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Hide_Tour_Info_In_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Tour Info In Itinerary</label>
    <type>Checkbox</type>
</CustomField>