force-app/main/default/objects/Opportunity/fields/sugati__O_Holiday_Enquiry_Recap_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Holiday_Enquiry_Recap_Description__c</fullName>
    <label>Holiday Enquiry Recap Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>