force-app/main/default/objects/Opportunity/fields/sugati__O_Holiday_Enquiry_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Holiday_Enquiry_Stage__c</fullName>
    <label>Holiday Enquiry Stage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>