force-app/main/default/objects/Opportunity/fields/sugati__O_Holiday_Grouping__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Holiday_Grouping__c</fullName>
    <label>Holiday Type For Content Only</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Short Break</fullName>
            </value>
            <value>
                <fullName>Chalet</fullName>
            </value>
            <value>
                <fullName>City break</fullName>
            </value>
            <value>
                <fullName>Diving</fullName>
            </value>
            <value>
                <fullName>European Beach Escape</fullName>
            </value>
            <value>
                <fullName>Expert Led Journey</fullName>
            </value>
            <value>
                <fullName>Long haul</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Skiing</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>