force-app/main/default/objects/Opportunity/fields/sugati__O_Holiday_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Holiday_Reason__c</fullName>
    <label>Holiday Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Babymoon</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Couple (not on honeymoon)</fullName>
            </value>
            <value>
                <fullName>Family Holiday (incl children 18 and over)</fullName>
            </value>
            <value>
                <fullName>Family Holiday (incl children 18 and under)</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Honeymoon</fullName>
            </value>
            <value>
                <fullName>Sabbatical</fullName>
            </value>
            <value>
                <fullName>Solo traveller</fullName>
            </value>
            <value>
                <fullName>Stag/Hen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>