force-app/main/default/objects/Opportunity/fields/sugati__O_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Holiday_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Holiday_Type__c.sugati__HT_HE__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>