force-app/main/default/objects/Opportunity/fields/sugati__O_HolTypeCode__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_HolTypeCode__c</fullName>
    <label>HolTypeCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>