force-app/main/default/objects/Opportunity/fields/sugati__O_Ignore_Tour_Flights__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Ignore_Tour_Flights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Tour Flights</label>
    <type>Checkbox</type>
</CustomField>