force-app/main/default/objects/Opportunity/fields/sugati__O_Include_Flight_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Include_Flight_Margin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Flight Margin</label>
    <type>Checkbox</type>
</CustomField>