force-app/main/default/objects/Opportunity/fields/sugati__O_Include_VAT__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Include_VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include VAT</label>
    <type>Checkbox</type>
</CustomField>