force-app/main/default/objects/Opportunity/fields/sugati__O_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Insurance_Company__c</fullName>
    <label>Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>