force-app/main/default/objects/Opportunity/fields/sugati__O_Insurance_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Insurance_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Confirmation</label>
    <type>Checkbox</type>
</CustomField>