force-app/main/default/objects/Opportunity/fields/sugati__O_Invoice_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Invoice_Text__c</fullName>
    <label>Invoice Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>