force-app/main/default/objects/Opportunity/fields/sugati__O_Is_Copied_From_Same_Client__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Is_Copied_From_Same_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Copied From Same Client</label>
    <type>Checkbox</type>
</CustomField>