force-app/main/default/objects/Opportunity/fields/sugati__O_Is_Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Is_Group_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Booking?</label>
    <type>Checkbox</type>
</CustomField>