force-app/main/default/objects/Opportunity/fields/sugati__O_Is_Template__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>