force-app/main/default/objects/Opportunity/fields/sugati__O_Itinerary_At_Glance_Rows__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Itinerary_At_Glance_Rows__c</fullName>
    <inlineHelpText>Enter the number of rows to display on the first page of Itinerary at a glance.</inlineHelpText>
    <label>Itinerary At Glance Rows</label>
    <length>50</length>
    <type>Text</type>
</CustomField>