force-app/main/default/objects/Opportunity/fields/sugati__O_Itinerary_Cover_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Itinerary_Cover_Name__c</fullName>
    <label>Itinerary Cover Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>