force-app/main/default/objects/Opportunity/fields/sugati__O_Itinerary_Display_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Itinerary_Display_Price__c</fullName>
    <inlineHelpText>Use this if you want to hide the Holiday Final Cost.</inlineHelpText>
    <label>Itinerary Display Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>