force-app/main/default/objects/Opportunity/fields/sugati__O_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Last_Payment__c</fullName>
    <label>Last Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>