force-app/main/default/objects/Opportunity/fields/sugati__O_Lead_CG__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Lead_CG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead CG</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>sugati__Client_Group__c.sugati__CG_Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>