force-app/main/default/objects/Opportunity/fields/sugati__O_Lead_CG_Gender__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Lead_CG_Gender__c</fullName>
    <formula>TEXT(sugati__O_Lead_CG__r.sugati__CG_Gender__c)</formula>
    <label>Lead CG Gender</label>
    <type>Text</type>
</CustomField>