force-app/main/default/objects/Opportunity/fields/sugati__O_Lead_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Lead_Email_Address__c</fullName>
    <description>This is to be used with workflow only.</description>
    <label>Lead Email Address</label>
    <type>Email</type>
</CustomField>