force-app/main/default/objects/Opportunity/fields/sugati__O_Lead_In__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Lead_In__c</fullName>
    <formula>sugati__O_Departure_Date__c -  CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>